# sdl-template

./: .gitignore  CMakeLists.txt
include/: cleanup.h  res_path.h  sdl_image_utils.h  sdl_utils.h
src/: main.cpp
